--- a/Sections/【 2.1 - 2.6 】Limits.md
+++ b/Sections/【 2.1 - 2.6 】Limits.md
@@ -1,4 +1,7 @@
-**Average Velocity Formula :** 
+
+<div style='overflow: hidden; white-space: nowrap; text-align: center'><hr style='display: inline-block; width: 40%;' />    <span style="color:deepskyblue; font-weight:900; letter-spacing: 2px">Section 2.1</span>    <hr style='display: inline-block; width: 40%' /></div>
+
+ **Average Velocity Formula :** 
 $$v_{av} = \frac{s(t_1) - s(t_0)}{t_1 - t_0}$$
 - _The average velocity is simply the slope function of the line joining two examined points._
 - The average velocity is the change in position divided by the change in time.
@@ -17,6 +20,8 @@ $$v_{inst} = \lim_{t \to 1} v_{av} = \lim_{t \to 1} \frac{s(t) - s(1)}{t - 1}$$
 	- The slopes of the secant lines $m_{sec}$ approach the slope of the tangent line $m_{tan}$ at the point $(1, \;s(1))$ .
 - Therefore, the slope of the tangent line is also expressed as a limit, the same that defines the instantaneous velocity.
 
+<div style='overflow: hidden; white-space: nowrap; text-align: center'><hr style='display: inline-block; width: 40%;' />    <span style="color:deepskyblue; font-weight:900; letter-spacing: 2px">Section 2.2</span>    <hr style='display: inline-block; width: 40%' /></div>
+
 **Two-Sided Limit :**
 	Suppose the function $f$ is defined for all $x$ near $a$ except possibly at $a$. If $f(x)$ is arbitrarily close to $L$ (as close to $L$ as we like) for all $x$ sufficiently close (but not equal) to $a$, we write:
 $$\lim_{x \to a}f(x) = L$$
@@ -34,7 +39,21 @@ $$\lim_{x \to a^+}f(x) = L$$
 $$\lim_{x \to a^-}f(x) = L$$
 	and say the limit of $f(x)$ as $x$ approaches $a$ from the left equals $L$.
 
-<span style="color: red"><b>THEOREM 2.1</b></span> **Relationship Between One-Sided and Two-Sided Limits**
+<span style="color: red; font-weight: 800">THEOREM 2.1</span> **Relationship Between One-Sided and Two-Sided Limits**
 	Assume $f$ is defined for all $x$ near $a$ except possibly at $a$. Then $\lim_{x \to a} f(x) = L$ if any only if $\lim_{x \to a^+} f(x) = L$ and $\lim_{x \to a^-} f(x) = L$
 - Put simply, the two-sided limit exists if and only if the left-sided and right-sided limits exist and are equal.
 
+<div style='overflow: hidden; white-space: nowrap; text-align: center'><hr style='display: inline-block; width: 40%;' />    <span style="color:deepskyblue; font-weight:900; letter-spacing: 2px">Section 2.3</span>    <hr style='display: inline-block; width: 40%' /></div>
+
+<span style="color: red; font-weight: 800">THEOREM 2.2</span> **Limits of Linear Functions**
+	Let $a$, $b$, and $m$ be real numbers. For linear functions $f(x)=mx + b$, $$\lim_{x \to a} f(x) = f(a) = ma + b$$
+
+<span style="color: red; font-weight: 800">THEOREM 2.3</span> **Limit Laws**
+	**1. Sum**  $\lim_{x \to a}\;(f(x) + g(x))=\lim_{x \to a}f(x)+\lim_{x \to a}g(x)$
+	**2. Difference**  $\lim_{x \to a}\;(f(x) - g(x)) = \lim_{x \to a}f(x) - \lim_{x \to a}g(x)$
+	**3. Constant Multiple**  $\lim_{x \to a}$
+	**4. Product**  $\lim_{x \to a}$
+	**5. Quotient**  $\lim_{x \to a}$
+	**6. Power**  $\lim_{x \to a}$
+	**7. Root**  $\lim_{x \to a}$
+	
